# -Conversor-Rag

./: README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/convert/: route.ts
lib/: chunker.ts  extractors.ts  markdown.ts
src/legal_docling/: __init__.py  chunker.py  cli.py  extractors.py  markdown.py  web.py
src/legal_docling/templates/: index.html
